tests/NormalTests/paczka1/small_fuzzy/78101012.err
Error in line 5: CjiuT9KKfns S673 30,97
Error in line 8: L14 S802 70,0
